--- a/Todo_App/templates/tasks/list.html
+++ b/Todo_App/templates/tasks/list.html
@@ -1,4 +1,8 @@
 <h3>To Do</h3>
+<form action="/" method="POST">
+    {{form.title}}
+    <input type="submit" name="Create Task">
+</form>
 {% for task in tasks %}
 {{ task.title }}
 {% endfor %}
