--- a/Todo_App/templates/tasks/list.html
+++ b/Todo_App/templates/tasks/list.html
@@ -9,6 +9,7 @@
     <p>
         {{ task }}
         <a href="{% url 'update_task' task.id %}">Update</a>
+        <a href="{% url 'delete' task.id %}">Delete</a>
     </p>
 </div>
 
