Complete Item strike

--- a/Todo_App/templates/tasks/list.html
+++ b/Todo_App/templates/tasks/list.html
@@ -7,7 +7,11 @@
 {% for task in tasks %}
 <div>
     <p>
-        {{ task }}
+        {% if task.complete == True %}
+        <strike>{{task}}</strike>
+        {% else %}
+        <span>{{task}}</span>
+        {% endif %}
         <a href="{% url 'update_task' task.id %}">Update</a>
         <a href="{% url 'delete' task.id %}">Delete</a>
     </p>
